// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DelightfulSelect > Snapshot Test > Basic Selector Snapshot 1`] = `
<DocumentFragment>
  <div
    class="delightful-select delightful-select-outlined css-var-r4 delightful-select-css-var css-dev-only-do-not-override-yotw4n delightful-select-single delightful-select-show-arrow"
  >
    <div
      class="delightful-select-selector"
    >
      <span
        class="delightful-select-selection-wrap"
      >
        <span
          class="delightful-select-selection-search"
        >
          <input
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="delightful-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="delightful-select-selection-placeholder"
        >
          Please Select
        </span>
      </span>
    </div>
    <span
      aria-hidden="true"
      class="delightful-select-arrow"
      style="user-select: none;"
      unselectable="on"
    >
      <svg
        class="tabler-icon tabler-icon-chevron-down "
        fill="none"
        height="16"
        stroke="rgba(28,29,35, 0.8)"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 9l6 6l6 -6"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;

exports[`DelightfulSelect > Snapshot Test > Multi-select Selector Snapshot 1`] = `
<DocumentFragment>
  <div
    class="delightful-select delightful-select-outlined css-var-ra delightful-select-css-var css-dev-only-do-not-override-yotw4n delightful-select-multiple delightful-select-show-arrow delightful-select-show-search"
  >
    <div
      class="delightful-select-selector"
    >
      <span
        class="delightful-select-selection-wrap"
      >
        <div
          class="delightful-select-selection-overflow"
        >
          <div
            class="delightful-select-selection-overflow-item delightful-select-selection-overflow-item-suffix"
            style="opacity: 1;"
          >
            <div
              class="delightful-select-selection-search"
              style="width: 0px;"
            >
              <input
                aria-autocomplete="list"
                aria-controls="rc_select_TEST_OR_SSR_list"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-owns="rc_select_TEST_OR_SSR_list"
                autocomplete="off"
                class="delightful-select-selection-search-input"
                id="rc_select_TEST_OR_SSR"
                readonly=""
                role="combobox"
                style="opacity: 0;"
                type="search"
                unselectable="on"
                value=""
              />
              <span
                aria-hidden="true"
                class="delightful-select-selection-search-mirror"
              >
                 
              </span>
            </div>
          </div>
        </div>
        <span
          class="delightful-select-selection-placeholder"
        />
      </span>
    </div>
    <span
      aria-hidden="true"
      class="delightful-select-arrow"
      style="user-select: none;"
      unselectable="on"
    >
      <svg
        class="tabler-icon tabler-icon-chevron-down "
        fill="none"
        height="16"
        stroke="rgba(28,29,35, 0.8)"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 9l6 6l6 -6"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;

exports[`DelightfulSelect > Snapshot Test > Large Size Selector Snapshot 1`] = `
<DocumentFragment>
  <div
    class="delightful-select delightful-select-lg delightful-select-outlined css-var-rc delightful-select-css-var css-dev-only-do-not-override-yotw4n delightful-select-single delightful-select-show-arrow"
  >
    <div
      class="delightful-select-selector"
    >
      <span
        class="delightful-select-selection-wrap"
      >
        <span
          class="delightful-select-selection-search"
        >
          <input
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="delightful-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="delightful-select-selection-placeholder"
        />
      </span>
    </div>
    <span
      aria-hidden="true"
      class="delightful-select-arrow"
      style="user-select: none;"
      unselectable="on"
    >
      <svg
        class="tabler-icon tabler-icon-chevron-down "
        fill="none"
        height="16"
        stroke="rgba(28,29,35, 0.8)"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 9l6 6l6 -6"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;

exports[`DelightfulSelect > Snapshot Test > Small Size Selector Snapshot 1`] = `
<DocumentFragment>
  <div
    class="delightful-select delightful-select-sm delightful-select-outlined css-var-re delightful-select-css-var css-dev-only-do-not-override-yotw4n delightful-select-single delightful-select-show-arrow"
  >
    <div
      class="delightful-select-selector"
    >
      <span
        class="delightful-select-selection-wrap"
      >
        <span
          class="delightful-select-selection-search"
        >
          <input
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="delightful-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="delightful-select-selection-placeholder"
        />
      </span>
    </div>
    <span
      aria-hidden="true"
      class="delightful-select-arrow"
      style="user-select: none;"
      unselectable="on"
    >
      <svg
        class="tabler-icon tabler-icon-chevron-down "
        fill="none"
        height="16"
        stroke="rgba(28,29,35, 0.8)"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 9l6 6l6 -6"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;

exports[`DelightfulSelect > Snapshot Test > Selector Snapshot with Clear Button 1`] = `
<DocumentFragment>
  <div
    class="delightful-select delightful-select-outlined css-var-rg delightful-select-css-var css-dev-only-do-not-override-yotw4n delightful-select-single delightful-select-allow-clear delightful-select-show-arrow"
  >
    <div
      class="delightful-select-selector"
    >
      <span
        class="delightful-select-selection-wrap"
      >
        <span
          class="delightful-select-selection-search"
        >
          <input
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="delightful-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="delightful-select-selection-placeholder"
        />
      </span>
    </div>
    <span
      aria-hidden="true"
      class="delightful-select-arrow"
      style="user-select: none;"
      unselectable="on"
    >
      <svg
        class="tabler-icon tabler-icon-chevron-down "
        fill="none"
        height="16"
        stroke="rgba(28,29,35, 0.8)"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 9l6 6l6 -6"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;

exports[`DelightfulSelect > Snapshot Test > Selector Snapshot with Default Value 1`] = `
<DocumentFragment>
  <div
    class="delightful-select delightful-select-outlined css-var-r6 delightful-select-css-var css-dev-only-do-not-override-yotw4n delightful-select-single delightful-select-show-arrow"
  >
    <div
      class="delightful-select-selector"
    >
      <span
        class="delightful-select-selection-wrap"
      >
        <span
          class="delightful-select-selection-search"
        >
          <input
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="delightful-select-selection-search-input"
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="delightful-select-selection-item"
          title="Option 1"
        >
          Option 1
        </span>
      </span>
    </div>
    <span
      aria-hidden="true"
      class="delightful-select-arrow"
      style="user-select: none;"
      unselectable="on"
    >
      <svg
        class="tabler-icon tabler-icon-chevron-down "
        fill="none"
        height="16"
        stroke="rgba(28,29,35, 0.8)"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 9l6 6l6 -6"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;

exports[`DelightfulSelect > Snapshot Test > Disabled Selector Snapshot 1`] = `
<DocumentFragment>
  <div
    class="delightful-select delightful-select-outlined css-var-r8 delightful-select-css-var css-dev-only-do-not-override-yotw4n delightful-select-single delightful-select-show-arrow delightful-select-disabled"
  >
    <div
      class="delightful-select-selector"
    >
      <span
        class="delightful-select-selection-wrap"
      >
        <span
          class="delightful-select-selection-search"
        >
          <input
            aria-autocomplete="list"
            aria-controls="rc_select_TEST_OR_SSR_list"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="rc_select_TEST_OR_SSR_list"
            autocomplete="off"
            class="delightful-select-selection-search-input"
            disabled=""
            id="rc_select_TEST_OR_SSR"
            readonly=""
            role="combobox"
            style="opacity: 0;"
            type="search"
            unselectable="on"
            value=""
          />
        </span>
        <span
          class="delightful-select-selection-placeholder"
        />
      </span>
    </div>
    <span
      aria-hidden="true"
      class="delightful-select-arrow"
      style="user-select: none;"
      unselectable="on"
    >
      <svg
        class="tabler-icon tabler-icon-chevron-down "
        fill="none"
        height="16"
        stroke="rgba(28,29,35, 0.8)"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 9l6 6l6 -6"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;
